# AgenticBrowser

./: .gitignore  CHANGES.md  PLAN.md  README.md  REPORT.md  package-lock.json  package.json
runtime-binary/: README.md  download.ts  patches.json
runtime-binary/ci/: README.md  build-runtime-binary.yml
runtime-binary/patches/: 01-v8-binding-automation-binding-removal.patch  02-cdp-cdp-runtime-isolation.patch  03-process-process-info-cleanup.patch  04-graphics-2d-canvas-pipeline-noise.patch  05-graphics-gl-webgl-parameter-noise.patch  06-graphics-gl-webgl-program-noise.patch  07-fonts-font-list-randomization.patch  08-audio-audio-buffer-noise.patch  09-network-tls-tls-clienthello-coherence.patch  10-network-h2-http2-settings-coherence.patch  11-network-h3-http3-quic-coherence.patch  12-webrtc-webrtc-ice-coherence.patch  13-network-dns-resolver-leak-removal.patch  14-system-screen-coherence.patch  15-system-window-position-coherence.patch  16-system-hardware-info-coherence.patch  17-intl-timezone-binary-flag.patch  18-intl-locale-binary-flag.patch  README.md
scripts/: validate.ts  worker-debug.ts
src/: cli.ts  index.ts  server.ts
src/behavior/: config.ts  pointer.ts  scrolling.ts  timing.ts  typing.ts
src/cache/: store.ts
src/commands/: act.ts  debug.ts  extract.ts  navigate.ts  observe.ts  open.ts  read.ts  recover.ts  verify.ts
src/core/: browser.ts  config.ts  session.ts  stealth.ts
src/fingerprint/: profile.ts  seed.ts
src/interaction/: actions.ts  (+1 more)
tls-shim/: Cargo.toml  README.md
tls-shim/src/: ca.rs  chrome_profile.rs  h2_rewriter.rs  main.rs
(+22 files in other folders)
